feat: add server deletion's API
